syntax = "proto3";

package com.dive.keycloak;

option go_package = "/proto;proto";
option java_package = "com.dive.keycloak.grpc";

service ProfileService {
  rpc CreateProfile (CreateRequest) returns (CreateResponse);
  rpc GetProfile(GetRequest) returns (GetResponse);
}

message CreateRequest{
  string id = 1;
  string email = 2;
}

message CreateResponse{
  string id = 1;
}

message GetRequest{
  string id = 1;
}

message GetResponse{
  string id = 1;
  string email = 2;
}